--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build --output-path dist   --base-href /ng-banshujiang/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint --fix"
+    "lint": "eslint ./src --fix",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -37,14 +38,25 @@
     "@typescript-eslint/parser": "5.44.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.8.2"
+  },
+  "lint-staged": {
+    "*.{ts,html}": [
+      "npm run lint"
+    ]
   }
 }
