--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,7 @@
     }
   ],
   "rules": {
-    "max-len":["error",{"code":120}]
+    "max-len":["error",{"code":120}],
+    "semi": ["error","never"]
   }
 }
