--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,8 @@
         ],
         "indent": ["error", 4],
         "array-element-newline": ["error","always"],
-        "array-bracket-newline": ["error",{"minItems":1}]
+        "array-bracket-newline": ["error",{"minItems":1}],
+        "no-trailing-spaces":["error", { "skipBlankLines": true }]
       }
     },
     {
@@ -55,5 +56,6 @@
   "rules": {
     "max-len":["error",{"code":120}],
     "semi": ["error","never"]
+    
   }
 }
