--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build --output-path dist   --base-href /ng-banshujiang/ --localize",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "eslint ./src --fix",
+    "lint": "npm run lint:es && npm run lint:css",
+    "lint:es": "eslint ./src --fix",
+    "lint:css": "stylelint \"src/**/*.css\" --fix ",
     "prepare": "husky install"
   },
   "private": true,
@@ -51,6 +53,8 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
+    "stylelint": "^14.16.1",
+    "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.8.2"
   },
