--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "npm run lint:es && npm run lint:css",
-    "lint:es": "ng lint",
+    "lint:es": "ng lint --fix",
     "lint:css": "stylelint \"src/**/*.css\" --fix ",
     "prepare": "husky install"
   },
