--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,9 @@
         "indent": ["error", 4],
         "array-element-newline": ["error","always"],
         "array-bracket-newline": ["error",{"minItems":1}],
-        "no-trailing-spaces":["error", { "skipBlankLines": true }]
+        "no-trailing-spaces":["error", { "skipBlankLines": true }],
+        "no-console": ["error"],
+        "space-in-parens": ["error", "always"]
       }
     },
     {
