feat: eslint comma-spacing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,8 @@
         "array-bracket-newline": ["error",{"minItems":1}],
         "no-trailing-spaces":["error", { "skipBlankLines": true }],
         "no-console": ["error"],
-        "space-in-parens": ["error", "always"]
+        "space-in-parens": ["error", "always"],
+        "comma-spacing": ["error"]
       }
     },
     {
