feat: no-multi-space

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,7 @@
     "max-len":["error",{"code":120}],
     "semi": ["error","never"],
     "key-spacing":["error"],
-    "@typescript-eslint/type-annotation-spacing":["error"]
+    "@typescript-eslint/type-annotation-spacing":["error"],
+    "no-multi-spaces":["error"]
   }
 }
