feat: add codecov action

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "ng build --output-path dist   --base-href /ng-banshujiang/ --localize",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:coverage": "ng test --no-watch --code-coverage",
+    "test:ci": "ng test --browsers=ChromeHeadless --no-watch --code-coverage",
     "lint": "npm run lint:es && npm run lint:css",
     "lint:es": "ng lint --fix",
     "lint:css": "stylelint \"src/**/*.css\" --fix ",
