--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "build": "ng build --output-path dist   --base-href /ng-banshujiang/ --localize",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:run": "npm run test:unit && npm run test:e2e",
+    "test:unit": "ng test --no-watch",
     "test:coverage": "ng test --no-watch --code-coverage",
     "test:ci": "ng test --browsers=ChromeHeadless --no-watch --code-coverage",
     "lint": "npm run lint:es && npm run lint:css",
     "lint:es": "ng lint --fix",
     "lint:css": "stylelint \"src/**/*.css\" --fix ",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "e2e": "ng e2e",
+    "test:e2e": "start-server-and-test start http://localhost:4200 cypress:run",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -44,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "5.44.0",
     "@typescript-eslint/parser": "5.44.0",
     "autoprefixer": "^10.4.13",
+    "cypress": "latest",
     "eslint": "^8.28.0",
     "eslint-plugin-tailwindcss": "^3.8.0",
     "husky": "^8.0.2",
@@ -55,6 +62,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
+    "start-server-and-test": "^1.15.4",
     "stylelint": "^14.16.1",
     "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.2.4",
